@@ -74,6 +74,7 @@ RCPP_SIMPLE_EXCEPTION_CLASS(index_out_of_bounds, "index out of bounds")
 RCPP_SIMPLE_EXCEPTION_CLASS(parse_error, "parse error") 
 RCPP_SIMPLE_EXCEPTION_CLASS(not_s4, "not an S4 object")
 RCPP_SIMPLE_EXCEPTION_CLASS(not_reference, "not an S4 object of a reference class")
+RCPP_SIMPLE_EXCEPTION_CLASS(not_initialized, "C++ object not initialized (missing default constructor?)")
 RCPP_SIMPLE_EXCEPTION_CLASS(no_such_slot, "no such slot")
 RCPP_SIMPLE_EXCEPTION_CLASS(no_such_field, "no such field")
 RCPP_SIMPLE_EXCEPTION_CLASS(not_a_closure, "not a closure")
