@@ -51,6 +51,7 @@ RCPP_SIMPLE_EXCEPTION_WHAT(index_out_of_bounds, "index out of bounds" )
 RCPP_SIMPLE_EXCEPTION_WHAT(parse_error, "parse error") 
 RCPP_SIMPLE_EXCEPTION_WHAT(not_s4, "not an S4 object" )
 RCPP_SIMPLE_EXCEPTION_WHAT(not_reference, "not a reference S4 object" )
+RCPP_SIMPLE_EXCEPTION_WHAT(not_initialized, "C++ object not initialized" )
 RCPP_SIMPLE_EXCEPTION_WHAT(no_such_slot, "no such slot" )
 RCPP_SIMPLE_EXCEPTION_WHAT(no_such_field, "no such field" )
 RCPP_SIMPLE_EXCEPTION_WHAT(not_a_closure, "not a closure" )
